2013-11-17  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Enable (experimental) support for Gtk+3.

2013-10-30  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/pioneers.nsi.in: Fixed installing style-ai.svg, see 2013-06-07.

2013-10-26  Roland Clobus <rclobus@rclobus.nl>
	* autogen.sh: Fixed --fhs argument handling.

2013-10-12  Roland Clobus <rclobus@rclobus.nl>
	* configure.ac: Work version is 15.2

2013-10-12  Roland Clobus <rclobus@rclobus.nl>
	* Released 15.1.

2013-10-12  Roland Clobus <rclobus@rclobus.nl>
	* client/help/C/Makefile.am, client/help/C/pioneers.xml: Use xmllint to
	reformat the xml help file.
	* client/help/C/pioneers.xml: Updated the sections about:
	    - Port forwarding
            - The computer player
	    - The server
	* NEWS, client/ai/lobbybot.c, docs/README.release: Prepare for the
	release.

2013-10-03  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/discard.c: Fixed compiler warning.
	* macros/gnome-autogen.sh: Synchronised from gnome-common 3.10.0-1,
	which adds support for automake 1.14.
	* autogen.sh: Added --fhs command line option to set the FHS paths.
	* client/help/C/Makefile.am: Updated the targets to build and clean the
	help files (simplehtml and yelphtml).
	* client/help/C/pioneers.xml: Updated Q&A section. Updated admin
	protocol.

2013-09-24  Micah Bunting <amnykon@gmail.com>
	* client/common/client.c, server/pregame.c: Simplified the "devcard"
	protocol.

2013-09-23  Roland Clobus <rclobus@rclobus.nl>
	* server/turn.c: Fixed 'admin fix-dice' command.
	* server/pregame.c: Fixed protocol incompatibility during reconnect.

2013-09-08  Micah Bunting <amnykon@gmail.com>
	* server/turn.c, server/server.h, server/pregame.c, server/develop.c,
	common/cards.c, common/cards.h, client/common/develop.c,
	client/common/client.c, client/common/client.h: Removed the variable
	played_develop and the corresponding protocol.
	* client/common/develop.c, client/ai/greedy.c, server/pregame.c,