@@ -86,7 +86,7 @@ void set_tooltip_on_column(GtkTreeViewColumn * column,
 			   const gchar * tooltip);
 
 #if GTK_MAJOR_VERSION > 2
-#error The embedded copy of gdk_pixbuf_get_from_surface must be removed
+#pragma message "The embedded copy of gdk_pixbuf_get_from_surface must be removed"
 #else
 GdkPixbuf *gdk_pixbuf_get_from_surface(cairo_surface_t * surface,
 				       gint src_x, gint src_y, gint width,
